# jingle-shells

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
docs/: guide.md
