[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"


[project]
name = "jingle-shells"
version = "0.1.0"
description = "A singing Christmas Tree in your terminal 🎄"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]
authors = [
    {name = "EurusDevSec", email = "zeno11275@gmail.com"}
]

[project.scripts]
jingle-shells="jingle_shells.main:main"

[tool.setuptools.package-data]
jingle_shells=["res/*.mp3"]