[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"


[project]
name = "jingle-shells"
version = "0.1.2"
description = "A singing Christmas Tree in your terminal 🎄"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]
authors = [
    {name = "EurusDevSec", email = "129585402+EurusDevSec@users.noreply.github.com"}
]

[project.scripts]
jingle-shells="jingle_shells.main:main"

[tool.setuptools.package-data]
jingle_shells=["res/*.mp3"]



classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License", # Khai báo license
    "Operating System :: OS Independent",
    "Topic :: Terminals"
]